clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/return_borrow/return_borrow.cbs
// RUN: %clang_cc1 -verify %s

T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void*);

int *borrow test1(int *borrow p) {
  int local = 42;
  return &mut local;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
}

int *borrow test2(int *borrow p) {
  int local = 42;
  p = &mut local;
  return p;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
}

int *borrow test3(int *borrow p, int a) {
  return &mut a;  //expected-error{{Return value cannot be a borrow from local variable 'a'}} 
}

int *borrow test4(int *borrow p, int a) {
  p = &mut a;
  return p;  //expected-error{{Return value cannot be a borrow from local variable 'a'}} 
}

int *borrow test5(int *borrow p) {
  int local = 5;
  p = &mut local;
  int* borrow p1 = &mut* p;
  return p1;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
}

int *borrow test6(int *borrow p) {
  int local = 5;
  p = &mut local;
  return &mut* p;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
}

int* borrow test7(int* borrow p) { // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
                                   // expected-note@-1  {{previous borrow is here}}
  int *owned oriPtr = safe_malloc<int>(0);
  p = &mut * oriPtr; 
  free_owned<int>(oriPtr);    // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  return p; /* expected-error {{borrow pointer variable '_ReturnVar' lives longer than target variable}}
              expected-error {{Return value cannot be a borrow from local variable 'oriPtr'}} */
}

int* borrow test8(int *owned oriPtr, int* borrow p) { // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
                                                      // expected-note@-1  {{previous borrow is here}}
  p = &mut * oriPtr;
  free_owned<int>(oriPtr);      // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  return p;  /* expected-error {{borrow pointer variable '_ReturnVar' lives longer than target variable}}
                expected-error {{Return value cannot be a borrow from local variable 'oriPtr'}} */
}

int *borrow test9(int *borrow p) {
  int local = 42;
  if (local > 0) {
    p = &mut local;
    return &mut *p;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
  } else
    return p;
}

int *borrow test10(int *borrow p) {
  int local = 42;
  if (local > 0)
    return &mut local;  //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
  else {
    p = &mut local;
    return p;   //expected-error{{Return value cannot be a borrow from local variable 'local'}} 
  }
}

int *borrow test11(int *borrow p) {
  int local = 42;
  if (local > 0) {
    int local2 = 42;
    if (local2 > 0)
      return &mut local2;  //expected-error{{Return value cannot be a borrow from local variable 'local2'}} 
    else
      return p;
  } else {
    int local3 = 42;
    if (local3 > 0)
      return &mut local3;  //expected-error{{Return value cannot be a borrow from local variable 'local3'}} 
    else
      return p;
  }
}

int* borrow test12(int* borrow p) {
  int local = 42;
  int *owned oriPtr = safe_malloc<int>(0);
  if (local > 0) {
    free_owned<int>(oriPtr);
    return &mut * oriPtr;  /* expected-error{{Return value cannot be a borrow from local variable 'oriPtr'}} 
                              expected-error{{borrow pointer variable '_ReturnVar' lives longer than target variable}} */
  }
  free_owned<int>(oriPtr);
  return p;
}

int* borrow test13(int* borrow p) {
  int *owned oriPtr = safe_malloc<int>(0);
  if (1) {
    free_owned<int>(oriPtr);
    return &mut * oriPtr;   /* expected-error{{Return value cannot be a borrow from local variable 'oriPtr'}} 
                              expected-error{{borrow pointer variable '_ReturnVar' lives longer than target variable}} */
  }
  return &mut * oriPtr;  //Dead Code
}

int main() {
  int local = 5;
  int *owned oriPtr = safe_malloc<int>(0); 
  test1(&mut local);
  test2(&mut local);
  test3(&mut local, 5);
  test4(&mut local, 5);
  test5(&mut local);
  test6(&mut local);
  test7(&mut local);
  test8(oriPtr, &mut local);
  test9(&mut local);
  test10(&mut local);
  test11(&mut local);
  test12(&mut local);
  test13(&mut local);  
  return 0;
}